# aiex

./: .gitignore  .iex.exs  .tool-versions  .zigler.exs  CHANGELOG.md  CLAUDE.md  Dockerfile.k8s  Makefile  README.md  aiex  mix.exs  test_example.ex  test_multi_panel_layout.exs  test_tui_display.exs  user_guide.md
assets/: tailwind.config.js
c_src/: build.zig  build.zig.zon
tui/: CLAUDE.md  Cargo.toml  Makefile  README.md  detailed_implementation_plan.md  go.mod  go.sum  main.go  start.sh
tui/cmd/: main.go
tui/internal/chat/: conversation_manager.go  presence_typing.go  streaming_chat.go  streaming_engine.go
tui/internal/editor/: collaboration.go  completion_engine.go  enhanced_editor.go  semantic_analyzer.go
tui/internal/events/: circular_buffer.go  event_processor.go  rate_controller.go  state_manager.go  stream_manager.go  stream_manager_test.go
tui/internal/filesystem/: manager.go  manager_test.go
tui/internal/performance/: lazy_loader.go  memory_manager.go  performance_monitor.go  performance_test.go  render_pipeline.go  virtual_scroll.go
tui/internal/rpc/: client.go  client_test.go  phoenix_channel.go  websocket.go
tui/internal/state/: manager.go
tui/internal/ui/: app.go  basic_types.go  chat_panel.go  chat_panel.go.bak  code_editor.go.bak  components.go.bak  file_explorer.go.bak  focus_manager.go  layout.go  render.go  simple_app.go  types.go.bak
tui/pkg/types/: messages.go  types.go
tui/src/: app.rs  chat_ui.rs  config.rs  events.rs  main.rs  message.rs  nats_client.rs  otp_client.rs  rich_text.rs  state.rs  terminal.rs  tui.rs  ui.rs
(+283 files in other folders)
