[package]
name = "aiex-tui"
version = "0.1.0"
edition = "2021"
authors = ["Aiex Team"]
description = "Rust Terminal User Interface for Aiex AI-powered Elixir coding assistant"
license = "Apache-2.0"

[dependencies]
# TUI framework with all widget features
ratatui = { version = "0.28", features = ["all-widgets"] }
crossterm = "0.28"

# Async runtime
tokio = { version = "1.37", features = ["full"] }
tokio-stream = "0.1"

# NATS client
async-nats = "0.35"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Configuration
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
toml = "0.8"

# State management
dashmap = "6.0"
futures = "0.3"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"